--- a/index.html
+++ b/index.html
@@ -1650,6 +1650,31 @@
             font-weight: 600;
         }
 
+        .profile-link {
+            cursor: pointer;
+            text-decoration: underline;
+            text-decoration-color: rgba(255, 255, 255, 0.3);
+            text-underline-offset: 3px;
+        }
+
+        .profile-link:hover {
+            text-decoration-color: var(--gold);
+            color: var(--bright-gold);
+        }
+
+        .profile-divider {
+            border-top: 1px solid rgba(212, 175, 55, 0.3);
+            margin: 1.5rem 0;
+        }
+
+        .profile-hint {
+            display: block;
+            font-size: 0.8rem;
+            color: rgba(255, 255, 255, 0.5);
+            margin-top: 0.3rem;
+            font-style: italic;
+        }
+
         .logout-btn {
             width: auto;
             padding: 0.4rem 1rem;
@@ -2416,7 +2441,9 @@
             background: rgba(0, 0, 0, 0.8);
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
+            overflow-y: auto;
+            padding: 2rem 0;
             z-index: 2000;
         }
 
@@ -2663,6 +2690,56 @@
             </div>
         </div>
 
+        <!-- Profile Modal -->
+        <div id="profileModal" class="modal hidden">
+            <div class="modal-content">
+                <h2 style="font-family: 'Bebas Neue', cursive; font-size: 2rem; color: var(--bright-gold); margin-bottom: 1.5rem; letter-spacing: 0.1em;">Profile Settings</h2>
+
+                <div class="input-group">
+                    <label for="profileUsername">Username</label>
+                    <input type="text" id="profileUsername" readonly style="opacity: 0.6; cursor: default;">
+                    <span class="profile-hint">This is what you use to log in</span>
+                </div>
+
+                <div class="input-group">
+                    <label for="profileDisplayName">Display Name</label>
+                    <input type="text" id="profileDisplayName" placeholder="Your display name">
+                    <span class="profile-hint">How your name appears on the leaderboard</span>
+                </div>
+
+                <div class="input-group">
+                    <label>Supported Teams (up to 2)</label>
+                    <div class="team-flags-picker" id="profileTeamsPicker"></div>
+                    <span class="profile-hint">Optionally show which team(s) you're supporting in the competition</span>
+                </div>
+
+                <div class="profile-divider"></div>
+
+                <div class="input-group">
+                    <label>Change Password</label>
+                    <span class="profile-hint" style="margin-bottom: 0.5rem;">Leave blank to keep your current password</span>
+                </div>
+                <div class="input-group">
+                    <label for="profileCurrentPassword">Current Password</label>
+                    <input type="password" id="profileCurrentPassword" placeholder="Enter current password">
+                </div>
+                <div class="input-group">
+                    <label for="profileNewPassword">New Password</label>
+                    <input type="password" id="profileNewPassword" placeholder="Enter new password">
+                </div>
+                <div class="input-group">
+                    <label for="profileConfirmPassword">Confirm New Password</label>
+                    <input type="password" id="profileConfirmPassword" placeholder="Confirm new password">
+                </div>
+
+                <div id="profileFeedback" class="login-feedback hidden"></div>
+
+                <span class="profile-hint hidden" id="profileSaveReminder" style="text-align: center; margin-bottom: 0.5rem;">Remember to click Save Changes to apply any updates</span>
+                <button onclick="saveProfile()">Save Changes</button>
+                <button class="btn-cancel" onclick="closeProfile()">Cancel</button>
+            </div>
+        </div>
+
         <!-- Main App View -->
         <div id="appView" class="hidden">
             <div class="app-header">
@@ -2675,7 +2752,7 @@
                     </select>
                 </div>
                 <div class="user-info">
-                    <div class="username" id="currentUser"></div>
+                    <div class="username profile-link" id="currentUser" onclick="openProfile()"></div>
                     <button class="logout-btn" id="logoutBtn" onclick="logout()">Logout</button>
                 </div>
             </div>
@@ -2915,6 +2992,10 @@
                 const selectedCount = container.querySelectorAll('.team-flag-option.selected').length;
                 if (selectedCount >= 2) return; // Max 2
                 el.classList.add('selected');
+            }
+            if (containerId === 'profileTeamsPicker') {
+                const reminder = document.getElementById('profileSaveReminder');
+                if (reminder) reminder.classList.remove('hidden');
             }
         }
 
@@ -4031,6 +4112,127 @@
             setTimeout(() => {
                 showApp();
             }, 800);
+        }
+
+        // Profile functions
+        function openProfile() {
+            if (!currentUsername || !users[currentUsername]) return;
+            const user = users[currentUsername];
+
+            document.getElementById('profileUsername').value = currentUsername;
+            document.getElementById('profileDisplayName').value = user.nickname || '';
+            document.getElementById('profileCurrentPassword').value = '';
+            document.getElementById('profileNewPassword').value = '';
+            document.getElementById('profileConfirmPassword').value = '';
+
+            const feedbackEl = document.getElementById('profileFeedback');
+            feedbackEl.classList.add('hidden');
+            feedbackEl.className = 'login-feedback hidden';
+
+            document.getElementById('profileSaveReminder').classList.add('hidden');
+
+            renderTeamFlagsPicker('profileTeamsPicker', user.supportedTeams || []);
+            document.getElementById('profileModal').classList.remove('hidden');
+
+            // Show save reminder when any field changes
+            const showReminder = () => document.getElementById('profileSaveReminder').classList.remove('hidden');
+            document.getElementById('profileDisplayName').oninput = showReminder;
+            document.getElementById('profileCurrentPassword').oninput = showReminder;
+            document.getElementById('profileNewPassword').oninput = showReminder;
+            document.getElementById('profileConfirmPassword').oninput = showReminder;
+        }
+
+        function closeProfile() {
+            document.getElementById('profileModal').classList.add('hidden');
+        }
+
+        async function saveProfile() {
+            const user = users[currentUsername];
+            const nickname = document.getElementById('profileDisplayName').value.trim();
+            const currentPassword = document.getElementById('profileCurrentPassword').value;
+            const newPassword = document.getElementById('profileNewPassword').value;
+            const confirmPassword = document.getElementById('profileConfirmPassword').value;
+            const feedbackEl = document.getElementById('profileFeedback');
+
+            feedbackEl.classList.add('hidden');
+            feedbackEl.className = 'login-feedback hidden';
+
+            if (!nickname) {
+                feedbackEl.textContent = 'Display name is required.';
+                feedbackEl.classList.remove('hidden');
+                feedbackEl.classList.add('error');
+                return;
+            }
+
+            // Check if nickname is taken by another user
+            const existingUser = Object.keys(users).find(u =>
+                u !== currentUsername && users[u].nickname && users[u].nickname.toLowerCase() === nickname.toLowerCase()
+            );
+            if (existingUser) {
+                feedbackEl.textContent = 'This display name is already taken.';
+                feedbackEl.classList.remove('hidden');
+                feedbackEl.classList.add('error');
+                return;
+            }
+
+            // Handle password change if any password fields are filled
+            if (currentPassword || newPassword || confirmPassword) {
+                if (!currentPassword) {
+                    feedbackEl.textContent = 'Please enter your current password.';
+                    feedbackEl.classList.remove('hidden');
+                    feedbackEl.classList.add('error');
+                    return;
+                }
+
+                const isValid = await verifyPassword(currentPassword, user.passwordHash);
+                if (!isValid) {
+                    feedbackEl.textContent = 'Current password is incorrect.';
+                    feedbackEl.classList.remove('hidden');
+                    feedbackEl.classList.add('error');
+                    return;
+                }
+
+                if (!newPassword) {
+                    feedbackEl.textContent = 'Please enter a new password.';
+                    feedbackEl.classList.remove('hidden');
+                    feedbackEl.classList.add('error');
+                    return;
+                }
+
+                if (newPassword !== confirmPassword) {
+                    feedbackEl.textContent = 'New passwords do not match.';
+                    feedbackEl.classList.remove('hidden');
+                    feedbackEl.classList.add('error');
+                    return;
+                }
+
+                if (newPassword.length < 4) {
+                    feedbackEl.textContent = 'Password must be at least 4 characters.';
+                    feedbackEl.classList.remove('hidden');
+                    feedbackEl.classList.add('error');
+                    return;
+                }
+
+                user.passwordHash = await hashPassword(newPassword);
+            }
+
+            // Update display name and teams
+            user.nickname = nickname;
+            user.supportedTeams = getSelectedTeams('profileTeamsPicker');
+
+            await Storage.saveUser(currentUsername, user);
+
+            // Update the displayed name in the header
+            let displayName = toTitleCase(nickname);
+            if (isCurrentUserAdmin()) {
+                displayName += '<span class="admin-badge">Admin</span>';
+            }
+            document.getElementById('currentUser').innerHTML = displayName;
+
+            // Refresh the match summary and leaderboard with updated data
+            showSummary();
+
+            closeProfile();
         }
 
         // Change theme
