--- a/index.html
+++ b/index.html
@@ -1924,35 +1924,51 @@
             .summary-table td.rank-col {
                 min-width: 24px;
                 width: 24px;
-                padding: 0.35rem 0.25rem;
+                padding: 0.25rem 0.15rem;
                 font-size: 0.75rem;
             }
 
-            .summary-table th.competitor-col,
-            .summary-table td.competitor-name {
-                min-width: 90px;
-                max-width: 110px;
-                padding: 0.4rem;
-                font-size: 0.72rem;
+            .summary-table th.competitor-col {
+                min-width: 72px;
+                max-width: 84px;
+                width: 72px;
+                padding: 0.25rem 0.15rem;
+                font-size: 0.62rem;
+                letter-spacing: 0.01em;
                 left: 24px;
+                white-space: normal;
+                line-height: 1.05;
+            }
+
+            .summary-table td.competitor-name {
+                min-width: 72px;
+                max-width: 84px;
+                width: 72px;
+                padding: 0.25rem 0.15rem;
+                font-size: 0.66rem;
+                left: 24px;
+                white-space: normal;
+                overflow-wrap: anywhere;
+                word-break: break-word;
+                line-height: 1.05;
             }
 
             .summary-table th.pts-col,
             .summary-table td.pts-col {
                 min-width: 36px;
-                padding: 0.35rem 0.25rem;
+                padding: 0.25rem 0.15rem;
                 font-size: 0.8rem;
-                left: 114px;
+                left: 96px;
             }
 
             .summary-table td {
-                padding: 0.4rem;
+                padding: 0.25rem 0.15rem;
                 font-size: 0.72rem;
             }
 
             .match-header-cell {
                 min-width: 70px !important;
-                padding: 0.3rem !important;
+                padding: 0.2rem !important;
                 font-size: 0.68rem;
             }
 
