tidy up button text

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="admin-tabs-section admin-only hidden">
                 <div class="admin-tabs-label">Admin Functions</div>
                 <div class="tabs admin-tabs">
-                    <button class="tab" onclick="showTab('competitors')">Competitor Management</button>
+                    <button class="tab" onclick="showTab('competitors')">Competitor Mgmt.</button>
                     <button class="tab" onclick="showTab('results')">Fixture Setup</button>
                     <button class="tab" onclick="showTab('recovery')">Database Recovery</button>
                 </div>
@@ -212,7 +212,7 @@
             <!-- Competitor Management Tab (Admin Only) -->
             <div id="competitorsTab" class="prediction-section hidden" style="margin-top: 2rem;">
                 <div style="background: rgba(255, 255, 255, 0.05); padding: 2rem; border-radius: 10px; border: 2px solid var(--gold); margin-bottom: 2rem;">
-                    <h2 style="font-family: 'Bebas Neue', cursive; font-size: 2rem; color: var(--bright-gold); margin-bottom: 1rem; letter-spacing: 0.1em;">Competitor Management</h2>
+                    <h2 style="font-family: 'Bebas Neue', cursive; font-size: 2rem; color: var(--bright-gold); margin-bottom: 1rem; letter-spacing: 0.1em;">Competitor Mgmt.</h2>
                     <p style="margin-bottom: 1rem;">Manage competitor accounts - edit details or remove users.</p>
                 </div>
 
